<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent">

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:id="@+id/ScrollView01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

    <RelativeLayout
        android:id="@+id/RelativeLayout01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

    <LinearLayout
        android:id="@+id/LinearLayout01"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:textSize="30dp"
            android:text="@string/grammar"
            android:id="@+id/textView3"
            android:background="#800000"
            android:layout_weight="5"
            android:gravity="center_horizontal|center_vertical"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a1"
            android:textAlignment="center"
            android:padding="10dp"
            android:id="@+id/textView20"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/a2"
            android:textAlignment="center"
            android:padding="10dp"
            android:id="@+id/textView8"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"

            android:text="@string/a3"
            android:id="@+id/textView9"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"

            android:text="@string/a4"
            android:id="@+id/textView10"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a5"
            android:padding="10dp"

            android:id="@+id/textView11"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a6"
            android:padding="10dp"
            android:id="@+id/textView12"

            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a7"
            android:padding="10dp"

            android:id="@+id/textView13"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a8"

            android:padding="10dp"
            android:id="@+id/textView14"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a9"
            android:padding="10dp"

            android:id="@+id/textView15"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/a10"

            android:padding="10dp"
            android:id="@+id/textView16"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"

            android:text="@string/a11"
            android:id="@+id/textView17"
            android:layout_gravity="center" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"

            android:text="@string/a13"
            android:id="@+id/textView19"
            android:layout_gravity="center" />

        <!--<ProgressBar-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:id="@+id/progressBar"-->
            <!--android:layout_gravity="center" />-->

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:textAlignment="center"
            android:text="@string/a12"
            android:id="@+id/textView18"
            android:layout_gravity="center" />





    </LinearLayout>

    </RelativeLayout>

    </ScrollView>



    <!--<ListView-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:id="@+id/listView"-->
        <!--android:layout_gravity="center_horizontal|top" />-->


</FrameLayout>